fixed a potential overflow issue on a small screen

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ code {
 
 header {
   font-size: 4rem;
+  overflow: hidden;
 }
 @media (max-width: 520px) {
   header {
